--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,36 @@
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+name: "Site1"
+title: "YEET"
+description: "I will take you on the fabulous world of Tristan!"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /jekyll-theme-memoirs
-google_analytics: 'UA-xxxxxxxx-1'
+google_analytics: ''
 disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+mailchimp-list: ''
 include: ["_pages"]
 permalink: /:title/
-email: wowthemesnet@gmail.com
+email: site@panquet.com.au
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  
+  Seb:
+    name: Seb
+    display_name: Baz
     avatar: 'assets/images/avatar-sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
+    email: site@panquet.com.au
+    web: panquet.com.au
+    twitter: https://twitter.com/elonmusk
+    description: "You are currently previewing an unfinsihed website/template"
+ Tristan:
+    name: Tristan
+    display_name: T    
     avatar: 'assets/images/avatar.png'
-    email: wowthemesnet@gmail.com
+    email: site@panquet.com.au
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+    description: " Not that Cool."
 
 # Plugins
 plugins:
@@ -63,8 +64,8 @@ kramdown:
 
 # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
 adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3412143450191416"
-adsense-data-ad-slot: "1363087678"
+adsense-data-ad-client: ""
+adsense-data-ad-slot: ""
 
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "disabled"
