--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "YEET"
 description: "I will take you on the fabulous world of Tristan!"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: ""
+baseurl: "panquet.github.io"
 google_analytics: ''
 disqus: 'demowebsite'
 mailchimp-list: ''
