--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "Site1"
-title: "YEET"
+name: "Memoirs"
+title: "Memoirs"
 description: "I will take you on the fabulous world of Tristan!"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
