--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,35 @@
 # Site
 name: "Memoirs"
 title: "Memoirs"
-description: "I will take you on the fabulous world of Tristan!"
+description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: "panquet.github.io"
-google_analytics: ''
+baseurl: /jekyll-theme-memoirs
+google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
-mailchimp-list: ''
+mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
-email: site@panquet.com.au
+email: wowthemesnet@gmail.com
 
 # Authors
 authors:
-  Seb:
-    name: Seb
-    display_name: Baz
+  sal:
+    name: Sal
+    display_name: Sal
     avatar: 'assets/images/avatar-sal.png'
-    email: site@panquet.com.au
-    web: panquet.com.au
-    twitter: https://twitter.com/elonmusk
-    description: "You are currently previewing an unfinsihed website/template"
- Tristan:
-    name: Tristan
-    display_name: T    
+    email: wowthemesnet@gmail.com
+    web: https://www.wowthemes.net/donate/
+    twitter: https://twitter.com/wowthemesnet
+    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
+  john:
+    name: John
+    display_name: John    
     avatar: 'assets/images/avatar.png'
-    email: site@panquet.com.au
+    email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: " Not that Cool."
+    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
 # Plugins
 plugins:
@@ -59,10 +59,12 @@ kramdown:
    syntax_highlighter_opts:
       disable : true
 
+
+
 # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
 adsense: "disabled"
-adsense-data-ad-client: ""
-adsense-data-ad-slot: ""
+adsense-data-ad-client: "ca-pub-3412143450191416"
+adsense-data-ad-slot: "1363087678"
 
 # Lazy Images ("enabled" or "disabled")
 lazyimages: "disabled"
