--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Yeet2"
 title: "Yeet1"
-description: "Documenting weird and wonderful creatures!"
+description: "Documenting weird and wonderful creatures! \n To be updated soon.."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /panquet.github.io
