--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: "Yeet2"
+name: "Panquet"
 title: "Yeet1"
 description: "Documenting weird and wonderful creatures! \n To be updated soon.."
 logo: 'assets/images/logo.png'
